Coy: Fixed overflow issue

--- a/themes/prism-coy.css
+++ b/themes/prism-coy.css
@@ -33,6 +33,7 @@ pre[class*="language-"] {
 	margin: .5em 0;
 	overflow: visible;
 	padding: 0;
+	clear: both;
 }
 pre[class*="language-"]>code {
 	position: relative;
